Break down what we do

--- a/index.html
+++ b/index.html
@@ -85,24 +85,62 @@
             <p class="sub-title pad-bt15">We don't just mentor our students<br>We mold them into engineers and all-around amazing employees.</p>
             <hr class="bottom-line">
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="service-item">
-              <h3><span>C</span>onnections</h3>
-              <p>Mentorship by developers, engineers and executives across the media, mobile, advertising and content landscapes.</p>
-            </div>
+          <h2 class="gettingjobdone pad-bt15 text-center">Getting a job is hard work!</h2>
+          <!--WHAT WE DO-->
+          <div class="content-section-a">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-5 col-sm-6">
+                          <div class="clearfix"></div>
+                          <div class="service-item">
+                            <h3><span>C</span>onnections</h3>
+                            <p class="sub-title pad-bt15">Mentorship by developers, engineers and executives across the media, mobile, advertising and content landscapes.</p>
+                          </div>
+                      </div>
+                      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                          <img class="img-responsive" src="img/tripetsy.png" alt="">
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="service-item">
-              <h3><span>T</span>raining</h3>
-              <p>Training on real world side projects in hackathons and innovation competitions. </p>
-            </div>
+
+
+          <div class="content-section-b">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                          <div class="clearfix"></div>
+                          <div class="service-item">
+                            <h3><span>T</span>raining</h3>
+                            <p class="sub-title pad-bt15">Training on real world side projects in hackathons and innovation competitions. </p>
+                          </div>
+                      </div>
+                      <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                          <img class="img-responsive" src="img/trainingpitch.jpg" alt="">
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="service-item">
-              <h3><span>S</span>oft Skills 101</h3>
-              <p>Bootcamps so our students are fluid, aware and dynamic in workplace 101.</p>
-            </div>
-          </div>          
+
+
+          <div class="content-section-a">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-5 col-sm-6">
+                          <div class="clearfix"></div>
+                          <div class="service-item">
+                            <h3><span>S</span>oft Skills 101</h3>
+                            <p class="sub-title pad-bt15">Bootcamps so our students are fluid, aware and dynamic in workplace 101.</p>
+                          </div>
+                      </div>
+                      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                          <img class="img-responsive" src="img/networkingmixer.jpg" alt="">
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <!--/WHAT WE DO-->
+
         </div>
       </div>
     </section>
@@ -143,10 +181,13 @@
                   <div class="item-img">
                     <img src="img/preparation.png">
                   </div>
-                  <h3 class="pad-bt15">Serious about preparation</h3>
-                  <p>We make sure they are primed and prepped for the workplace</p>
+                  <h3 class="pad-bt15">We know what it takes to succeed</h3>
+                  <p>Prep from Day 1 and commitment to build professional outlook</p>
                 </div>
               </div>
+
+
+
             </div>
           </div>
           <br><br>
@@ -326,8 +367,7 @@
           
           <hr class="bottom-line">
           <h3>Getting a job is hard work!</h3>
-          <p class="sub-title pad-bt15">We know what it takes to succeed. We prep our students from Day 1.We commit to build their professional outlook. </p>
-          <hr class="bottom-line">        
+        
 
           <h3>The Future</h3>
           <p class="sub-title pad-bt15">We know we are a stealth school. But we are in Tech Alley’s own backyard! Our home is CCNY 137th Street, in Harlem USA. We have a 140 year history of elevating the ranks of New York’s immigrants and first generation scholars.</p>
