--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                           </div>
                       </div>
                       <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                          <img class="img-responsive" src="img/networkingmixer.jpg" alt="">
+                          <img class="img-responsive" src="img/micah.jpg" alt="">
                       </div>
                   </div>
               </div>
