Change testimonial section

--- a/index.html
+++ b/index.html
@@ -278,50 +278,115 @@
     </section>
     <!---->
     <!---->
-    <!--WIDTH OF PICTURES WHEN CROPPING: 1817px-->
-    <!---->
-    <!---->
+    <!-- Testimonial Section Start -->
     <section id="testimonial" class="wow fadeInUp delay-05s">
-      <div class="bg-testicolor">
-        <div class="container section-padding">
+      <div class="container section-padding">
         <div class="row">
-          <div class="testimonial-item">
-            <ul class="bxslider">
-              <li>
+          <div id="testimonial-carousel" class="carousel slide wow fadeInUp animated" data-ride="carousel" data-wow-delay="1.2s">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#testimonial-carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#testimonial-carousel" data-slide-to="1"></li>
+              <li data-target="#testimonial-carousel" data-slide-to="2"></li>
+              <li data-target="#testimonial-carousel" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="item active">
                 <blockquote>
-                  <img src="img/meghna.jpg" class="img-responsive">
-                  <p>This community has played a big part in opening my eyes to the real world. I feel the greatest benefit of joining this community is meeting people who have the same goal as you and are willing to help you achieve yours.</p>
+                  <div class="commant">
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                      <div class="claint">
+                        <img src="img/meghna.jpg" alt="">
+                      </div>
+                      <span class="quote"><i class="fa fa-quote-left"></i></span>
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+                      <div class="info">
+                        <p>This community has played a big part in opening my eyes to the real world. I feel the greatest benefit of joining this community is meeting people who have the same goal as you and are willing to help you achieve yours.</p>
+                        <h4>Meghna Pai</h4>
+                        <h5>Mentee</h5>
+                      </div>
+                    </div>
+                  </div>
                 </blockquote>
-                <small>Meghna Pai, Mentee</small>
-              </li>
-              <li>
+              </div>
+
+              <div class="item">
                 <blockquote>
-                  <img src="img/tahsin.jpg" class="img-responsive">
-                  <p>I have really been able to find a sense of direction for myself...this channel and many of the different companies and people that David and Anthony have linked us to are filled with people who ARE willing to help you.</p>
+                  <div class="commant">
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                      <div class="claint">
+                        <img src="img/tahsin.jpg" alt="">
+                      </div>
+                      <span class="quote"><i class="fa fa-quote-left"></i></span>
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+                      <div class="info">
+                        <p>I have really been able to find a sense of direction for myself...this channel and many of the different companies and people that David and Anthony have linked us to are filled with people who ARE willing to help you.</p>
+                        <h4>Tahsin Jahin</h4>
+                        <h5>Mentee</h5>
+                      </div>
+                    </div>
+                  </div>
                 </blockquote>
-                <small>Tahsin Jahin, Mentee</small>
-              </li>
-              <li>
+              </div>
+
+              <div class="item">
                 <blockquote>
-                  <img src="img/satyam.jpg" class="img-responsive">
-                  <p>We regularly share information about meetups, hackathons, and other resources to gain real world experience. These experiences have helped me make some of my best and most thoughtful career decisions. </p>
+                  <div class="commant">
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                      <div class="claint">
+                        <img src="img/satyam.jpg" alt="">
+                      </div>
+                      <span class="quote"><i class="fa fa-quote-left"></i></span>
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+                      <div class="info">
+                        <p>We regularly share information about meetups, hackathons, and other resources to gain real world experience. These experiences have helped me make some of my best and most thoughtful career decisions.</p>
+                        <h4>Satyam Sharma</h4>
+                        <h5>Mentee</h5>
+                      </div>
+                    </div>
+                  </div>
                 </blockquote>
-                <small>Satyam Sharma, Mentee</small>
-              </li>
-              <li>
+              </div>
+
+              <div class="item">
                 <blockquote>
-                  <img src="img/michael.png" class="img-responsive">
-                  <p>Career mentoring is a huge part of getting internships, opportunities and a job after college. Sadly it is not easy to gain access to high quality mentoring. That's why this program was created by Anthony and David: To prep and make sure everyone is prepared for the real world.</p>
+                  <div class="commant">
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                      <div class="claint">
+                        <img src="img/michael.png" alt="">
+                      </div>
+                      <span class="quote"><i class="fa fa-quote-left"></i></span>
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+                      <div class="info">
+                        <p>Career mentoring is a huge part of getting internships, opportunities and a job after college. Sadly it is not easy to gain access to high quality mentoring. That's why this program was created by Anthony and David: To prep and make sure everyone is prepared for the real world.</p>
+                        <h4>Michael Ousseinov</h4>
+                        <h5>Mentee</h5>
+                      </div>
+                    </div>
+                  </div>
                 </blockquote>
-                <small>Michael Ousseinov, Mentee</small>
-              </li>
-            </ul>
+              </div>
+
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </section>
-    <!---->
+    <!-- Testimonial Section End -->
+
+
+
+
+
+
+
+
+
+
     <!---->
     <section class="section-padding wow fadeInUp delay-05s" data-color="black" id="companies" class="companies">
       <div class="container">
@@ -393,7 +458,7 @@
     <footer id="footer">
       <div class="container">
         <div class="row text-center">
-          <p>&copy; Baker Theme. All Rights Reserved.</p>
+          <p>&copy; Baker Theme and GrayGrids. All Rights Reserved.</p>
           <div class="credits">
             <!-- 
                 All the links in the footer should remain intact. 
@@ -401,7 +466,7 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Baker
             -->
-            Designed  by <a href="https://bootstrapmade.com/">Bootstrap Themes</a>
+            Designed  by <a href="https://bootstrapmade.com/">Bootstrap Themes</a> and <a href="http://graygrids.com">GrayGrids</a>
         </div>
         </div>
       </div>
