Update testimonials, student profiles, logos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
-                <img src="img/kirstyn.jpeg" class="img-responsive smaller">
+                <img src="img/kirstyn.jpeg" class="img-responsive smaller center-img">
               </div>
               <div class="blog-info">
                 <h2>Kirstyn Natavio</h2>
@@ -201,7 +201,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
-                  <img src="img/adomas.jpg" class="img-responsive smaller">
+                  <img src="img/adomas.jpg" class="img-responsive smaller center-img">
               </div>
               <div class="blog-info">
                 <h2>Adomas Hassan</h2>
@@ -217,7 +217,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
-                  <img src="img/meghna.jpg" class="img-responsive smaller">
+                  <img src="img/meghna.jpg" class="img-responsive smaller center-img">
               </div>
               <div class="blog-info">
                 <h2>Meghna Pai</h2>
@@ -232,7 +232,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
-                  <img src="img/melvin.png" class="img-responsive smaller">
+                  <img src="img/melvin.png" class="img-responsive smaller center-img">
               </div>
               <div class="blog-info">
                 <h2>Melvin Cheria</h2>
@@ -247,7 +247,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
-                  <img src="img/tahsin.jpg" class="img-responsive smaller" id="tahsin">
+                  <img src="img/tahsin.jpg" class="img-responsive smaller center-img" id="tahsin">
               </div>
               <div class="blog-info">
                 <h2>Tahsin Jahin</h2>
@@ -262,7 +262,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
-                  <img src="img/darius.jpg" class="img-responsive smaller">
+                  <img src="img/darius.jpg" class="img-responsive smaller center-img">
               </div>
               <div class="blog-info">
                 <h2>Darius San Agustin</h2>
@@ -377,16 +377,7 @@
       </div>
     </section>
     <!-- Testimonial Section End -->
-
-
-
-
-
-
-
-
-
-
+    <!---->
     <!---->
     <section class="section-padding wow fadeInUp delay-05s" data-color="black" id="companies" class="companies">
       <div class="container">
@@ -399,11 +390,17 @@
             <div class="companiesection">
               <div class="company"><img src = "img/rbc.png"></div>
               <div class="company"><img src = "img/barclays.png"></div>
+              <div class="company"><img src = "img/bnymellon.png"></div>
+              <div class="company"><img src = "img/spglobal.png"></div>
             </div>
             <div class="companiesection">
               <div class="company"><img src = "img/centiment.png"></div>
               <div class="company"><img src = "img/google.png"></div>
               <div class="company"><img src = "img/bankofamerica.png"></div>
+            </div>
+            <div class="companiesection">
+              <div class="company"><img src = "img/jpmorgan.png"></div>
+              <div class="company"><img src = "img/morganstanley.png"></div>
             </div>
           </div>
         </div>
