Add remaining student profiles

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
               </div>
             </div>
           </div>
+      
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="blog-sec">
               <div class="blog-img">
@@ -270,9 +271,58 @@
                   <li>Built custom levels for Super Mario World (SNES) using Lunar</li>
                   <li>Built Virtual Scavenger Hunt app that challenges the user to find certain objects, takes pictures of them, and uses AI to verify if the objects were found</li>
                 </ul>
+                <br><br><br><br><br><br><br>
               </div>
             </div>
           </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                  <img src="img/satyam.png" class="img-responsive smaller center-img">
+              </div>
+              <div class="blog-info">
+                <h2>Satyam Sharma</h2>
+                <ul>
+                  <li>TBA</li>
+                  <li>TBA</li>
+                  <li>Recipient of HackNY #HackHarassment prize</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                  <img src="img/michael.png" class="img-responsive smaller center-img">
+              </div>
+              <div class="blog-info">
+                <h2>Michael Ousseinov</h2>
+                <ul>
+                  <li>TBA</li>
+                  <li>TBA</li>
+                  <li>Recipient of HackNY #HackHarassment prize</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="blog-sec">
+              <div class="blog-img">
+                  <img src="img/guycarlos.png" class="img-responsive smaller center-img">
+              </div>
+              <div class="blog-info">
+                <h2>Guy Carlos Villette</h2>
+                <ul>
+                  <li>Macaulay Honors College sophomore</li>
+                  <li>Data Analyst Intern at Centiment.io – used Excel VBA and SQL to pull data and represent it; made program that filtered out tweets and set up control module for machine learning to base off of</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -336,7 +386,7 @@
                   <div class="commant">
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
                       <div class="claint">
-                        <img src="img/satyam.jpg" alt="">
+                        <img src="img/satyam.png" alt="">
                       </div>
                       <span class="quote"><i class="fa fa-quote-left"></i></span>
                     </div>
