--- a/index.html
+++ b/index.html
@@ -284,9 +284,10 @@
               <div class="blog-info">
                 <h2>Satyam Sharma</h2>
                 <ul>
-                  <li>TBA</li>
-                  <li>TBA</li>
-                  <li>Recipient of HackNY #HackHarassment prize</li>
+                  <li>Fascinated by Computer Vision and Image Processing</li>
+                  <li>Aspires to be a Software Engineer and work on product development and testing</li>
+                  <li>Interning at Memorial Sloan Kettering Cancer Center and researching in Biomedical Imaging</li>
+                  <li>IBM Watson Competition finalist – created chatbot to help New Yorkers easily find Government records from the NYC Open Data</li>
                 </ul>
               </div>
             </div>
