Keep color scheme consistent

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           <div class="col-md-12 text-center white">
             <h2 class="service-title pad-bt15">Keep in touch with us</h2>
             <p class="sub-title pad-bt15">We would like to hear from you!</p>
-            <hr class="bottom-line white-bg">
+            <hr class="bottom-line">
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="loction-info white">
