Add Michael's info

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   <li>Macaulay Honors College sophomore</li>
                   <li>Aspires to work in FinTech industry</li>
                   <li>Data Analyst Intern at Compstak</li>
-                  <li>Recipient of HackNY #HackHarassment prize for developing in a team of six a Slack Bot that monitors Slack channels for negativity and inapproapriate content </li>
+                  <li>Recipient of HackNY #HackHarassment prize for developing goodbot(a Slack Bot that monitors Slack channels for negativity and inapproapriate content) in a team of six</li>
                 </ul>
               </div>
             </div>
@@ -240,7 +240,7 @@
                 <ul>
                   <li>Working on schedule maker for CUNYfirst</li>
                   <li>Competing in the ACM ICPC</li>
-                  <li>Recipient of HackNY #HackHarassment prize</li>
+                  <li>Recipient of HackNY #HackHarassment prize for developing goodbot</li>
                 </ul>
               </div>
             </div>
@@ -288,6 +288,7 @@
                   <li>Aspires to be a Software Engineer and work on product development and testing</li>
                   <li>Interning at Memorial Sloan Kettering Cancer Center and researching in Biomedical Imaging</li>
                   <li>IBM Watson Competition finalist – created chatbot to help New Yorkers easily find Government records from the NYC Open Data</li>
+                  <li>Recipient of HackNY #HackHarassment prize for developing goodbot</li>
                 </ul>
               </div>
             </div>
@@ -301,9 +302,10 @@
               <div class="blog-info">
                 <h2>Michael Ousseinov</h2>
                 <ul>
-                  <li>TBA</li>
-                  <li>TBA</li>
-                  <li>Recipient of HackNY #HackHarassment prize</li>
+                  <li>Worked on mathematical equation optimizer that optimizes functions finding minimums and maximums</li>
+                  <li>Interested in Mathematics, Origami, Physics, and Music</li>
+                  <li>Recipient of HackNY #HackHarassment prize for developing goodbot</li>
+                  <li>Aspires to work in Product Management, Quantitative Analysis and Algorithm Development</li>
                 </ul>
               </div>
             </div>
