Fix minor details.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
+            <h3 class="unbold">Propelling CCNY's Computer Science engineers into New York’s tech ecosystem<br>We are a high-value, low cost mentoring and career outreach platform</h3>
+            <br>
             <h2 class="service-title pad-bt15 whatwedo-title">What We Do</h2>
             <p class="sub-title pad-bt15">We don't just mentor our students<br>We mold them into engineers and all-around amazing employees.</p>
             <hr class="bottom-line">
@@ -471,11 +473,11 @@
             <hr class="bottom-line">   
 
             <h3>Born out of Necessity</h3>
-            <p class="sub-title pad-bt15">David Wysoki,a CCNY alumni, lawyer and asset manager; and Anthony Shalagin, a CS student and budding engineer, wanted to make a difference for the CCNY Engineering Honors community – CCNY Code was thus founded.<p>
+            <p class="sub-title pad-bt15">David Wysoki,a CCNY alumnus, lawyer and asset manager; and Anthony Shalagin, a CS student and budding engineer, wanted to make a difference for the CCNY Engineering Honors community – CCNY Code was thus founded.<p>
              
 
             <h3>The Future</h3>
-            <p class="sub-title pad-bt15">We know we are a stealth school. But we are in Tech Alley’s own backyard! Our home is CCNY 137th Street, in Harlem USA. We have a 140 year history of elevating the ranks of New York’s immigrants and first generation scholars.</p>
+            <p class="sub-title pad-bt15">We know we are a stealth school. But we are in Tech Alley’s own backyard! Our home is CCNY 137th Street, in Harlem USA. We have a 170 year history of elevating the ranks of New York’s immigrants and first generation scholars.</p>
 
           </div>
           </div>        
@@ -495,9 +497,16 @@
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="loction-info white">
-              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>160 Convent Avenue<br>New York, NY 10031</p>
-              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>dwysoki@axoniccap.com</p>
+              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>160 Convent Avenue, New York, NY 10031</p>
+              <p><i class="fa fa-slack fa-fw pull-left fa-2x"></i>https://cshonorsmentoring.slack.com/signup</p>
+              <br>
+              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>David.wysoki1@gmail.com</p>
+              <p><i class="fa fa-linkedin-square fa-fw pull-left fa-2x"></i>www.linkedin.com/in/david-wysoki-12315112/</p>
+              <br>
               <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>anthony.shalagin@gmail.com</p>
+              <p><i class="fa fa-linkedin-square fa-fw pull-left fa-2x"></i>www.linkedin.com/in/anthonyshalagin/</p>
+
+
             </div>
           </div>
         </div>
